Add content, Update menus and sub-menus, Add disqus + April CVs (#5)

--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "repository": "https://github.com/NdagiStanley/home",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "format": "prettier --write \"**/*.{js,vue,md,html,json}\" --ignore-path .gitignore"
   },
   "author": "Ndagi Stanley <ndagis@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@vuepress/utils": "next",
     "@vuepress/plugin-register-components": "next",
-    "vuepress": "next"
+    "vuepress": "next",
+    "vue-disqus": "next",
+    "prettier": "^2.5.1"
   }
 }
