--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,12 @@
   force = true
 
 [[redirects]]
+  from = "/mentor"
+  to = "https://adplist.org/mentors/ndagi-stanley"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/devstory"
   to = "https://bit.ly/md-devstory"
   status = 301
